# personal-agent-gateway

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: final-review-fix-report.md  task-1-report.md  task-3-report.md  task-4-report.md  task-5-report.md
docs/: registry.json
docs/adr/: 2026-07-15-audit-retention-and-redaction.md  2026-07-15-auth-session-storage.md  2026-07-15-automation-lifecycle.md  (+4 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.test.js
scripts/: detect_local_agent_capabilities.mjs  detect_local_agent_capabilities.test.mjs  measure_read_performance.py  run_local.ps1  run_local.sh  run_tunnel.ps1  run_tunnel.sh
tests/: team_cycle_helpers.py  test_agent_session_link.py  test_agents.py  test_api_agents.py  test_api_artifacts.py  test_api_auth.py  test_api_dashboard.py  test_api_hooks.py  test_api_jobs.py  test_api_operations.py  test_api_personas.py  test_api_rules.py  test_api_schedules.py  test_api_settings.py  test_api_spaces.py  test_api_team_runs.py  test_api_teams.py  test_app.py  test_app_lifecycle.py  test_app_team_factory.py  test_artifact_types.py  test_artifacts.py  test_audit.py  test_auth_sessions.py  test_auth_store.py  test_backup.py  test_capabilities.py  test_config.py  test_config_auth.py  test_config_hooks.py  test_db.py  test_db_agent_teams_schema.py  test_db_hooks_schema.py  test_emergency_stop.py  test_events.py  test_health.py  test_hook_loop.py  test_hook_runner.py  test_hook_runs.py  test_hook_secrets.py  (+33 more)
(+349 files in other folders)
